A couple important (global) changes
1.  I changed the arguments on the select box macro in GlobalMacros.vm
It now takes a business object (AttributeValue) and a String field name
that matches a field name in intake. (it is more flexible this way.)

2.  I swapped the order of columns in R_Module_Attribute to match the order of
names in the table name.  I think this is less confusing.


The rest is related to getting the issue entry working.  You can now
enter an issue, though the dedupe page currently shows all issues as
potential dupes.  The search is not implemented.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -1,7 +1,6 @@
-#macro ( attrValueSelect $issue $attKey $size )
-    #set ( $attrValue = $issue.ModuleAttributeValuesMap.get($attKey) )
-    #set ( $attr = $attrValue.Attribute )
+#macro ( attrValueSelect $attrValue $optionFieldName $size )
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
+    #set ( $attr = $attrValue.Attribute )
         <input type="hidden" name="$attrInput.CID" value="$attrInput.OID">
 
         <select name="$attrInput.OptionId.Key" #if($size.length())size="$size"#end>
@@ -10,11 +9,18 @@
             #end
             #foreach ($option in $attr.AttributeOptions)
               #set ( $selected = "" )
-              #if ( $option.OptionId == $attrInput.OptionId.Value.Value )
+              #if ( $option.OptionId == $attrInput.get($optionFieldName).Value.Value )
                 #set ( $selected = " selected" )
               #end
               <option$selected value="$option.OptionId">
                   $option.DisplayValue</option>
             #end
         </select>
+#end
+
+#macro ( attrValueErrorMsg $attrValue $fieldName )
+    #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
+    #if ( !$attrInput.get($fieldName).isValid() )
+        <font color="red">$attrInput.get($fieldName).Message</font>
+    #end
 #end
