--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -1,14 +1,3 @@
-#macro ( attrValueErrorMsg $issue $attKey )
-    #set ( $attrValue = $issue.ModuleAttributeValuesMap.get($attKey) )
-    #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
-    #if ( !$attrInput.OptionId.isValid() )
-        $attrInput.OptionId.Message
-    #elseif ( !$attrInput.Value.isValid() )
-        $attrInput.Value.Message
-    #end
-#end
-
-## skip the dedupe for now
 #set ( $action = $link.setPage("entry,Wizard1.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry,Wizard3.vm") )
 #set ($user = $scarabR.User)
 #set ($module = $user.CurrentModule)
@@ -17,10 +6,11 @@
 <form name="ReportForm" method="post" action="$action">
 
 <p>
-    #attrValueErrorMsg( $issue "SUMMARY" )<br>
-    Summary:
+
     #set ( $attrValue = $issue.ModuleAttributeValuesMap.get("SUMMARY") )
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
+    #attrValueErrorMsg( $attrValue "Value" )<br>
+    Summary:
    <input type="hidden" name="$attrInput.CID" value="$attrInput.OID">
    <input name= "$attrInput.Value.Key"
         value="$!attrInput.Value.Value" size="20" type="text">
@@ -37,14 +27,21 @@
         </SELECT>
 <p>
 
-          Platform:<BR>
-          #attrValueErrorMsg ($issue "PLATFORM") <br>
-          #attrValueSelect ($issue "PLATFORM" "")
+
+
+
+Platform:<BR>
+#set ( $attrValue = $issue.ModuleAttributeValuesMap.get("PLATFORM") )
+#attrValueErrorMsg ($attrValue "OptionId") <br>
+#attrValueSelect ($attrValue "OptionId" "")
+
 <p>
 
-          OS:<br>
-          #attrValueErrorMsg ($issue "OPERATING SYSTEM") <br>
-          #attrValueSelect ($issue "OPERATING SYSTEM" "")
+OS:<br>
+#set ( $attrValue = $issue.ModuleAttributeValuesMap.get("OPERATING SYSTEM") )
+#attrValueErrorMsg ($attrValue "OptionId") <br>
+#attrValueSelect ($attrValue "OptionId" "")
+
 <p>
 
             <input type="submit" 
